# tasty

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  README.md  appveyor.yml  cabal.project  ci-test  stack.yaml
.github/workflows/: ci.yaml
benchmarks/dependencies/: analyze.R  run  test.hs  times.tsv
core/: CHANGELOG.md  CHANGES.md  tasty.cabal
core-tests/: AWK.hs  Dependencies.hs  DependentTestGroup.hs  Resources.hs  SequentialTestGroup.hs  Timeouts.hs  Utils.hs  core-tests-hpc.sh  core-tests.cabal  exit-status-test.hs  exit-status-tests.sh  failing-pattern-test.hs  failing-pattern-test.sh  hide-successes-test.hs  huge-test-tree.hs  multiple-pattern-test.hs  multiple-pattern-test.sh  resource-release-test.hs  resource-release-test.sh  test.hs  top-level-options.hs
core-tests/awk/: 1.golden.ast  1.golden.value  10.golden.ast  11.golden.ast  11.golden.value  12.golden.ast  13.golden.ast  13.golden.value  14.golden.ast  15.golden.ast  15.golden.value  16.golden.ast  17.golden.ast  18.golden.ast  19.golden.ast  2.golden.ast  2.golden.value  20.golden.ast  20.golden.value  22.golden.ast  22.golden.value  23.golden.ast  23.golden.value  24.golden.ast  24.golden.value  25.golden.ast  25.golden.value  26.golden.ast  26.golden.value  27.golden.ast  28.golden.ast  28.golden.value  29.golden.ast  29.golden.value  3.golden.ast  4.golden.ast  4.golden.value  5.golden.ast  5.golden.value  6.golden.ast  (+7 more)
core/Control/Concurrent/: Async.hs
core/Test/: Tasty.hs
core/Test/Tasty/: CmdLine.hs  ConsoleFormat.hs  ConsoleTestReporter.hs  Core.hs  CoreOptions.hs  Hpc.hs  Ingredients.hs  Options.hs  Parallel.hs  Patterns.hs  Providers.hs  Run.hs  Runners.hs  UI.hs
core/Test/Tasty/Compat/: Monoid.hs
core/Test/Tasty/Ingredients/: Basic.hs  ConsoleReporter.hs  IncludingOptions.hs  ListTests.hs
core/Test/Tasty/Options/: Core.hs  Env.hs
core/Test/Tasty/Patterns/: Eval.hs  Expr.hs  Parser.hs  Printer.hs  Types.hs
core/Test/Tasty/Providers/: ConsoleFormat.hs
core/Test/Tasty/Runners/: Reducers.hs  Utils.hs  Wrap.hs
hspec/: LICENSE  tasty-hspec.cabal
hspec/Test/Tasty/: Hspec.hs
hunit/: CHANGELOG  CHANGELOG.md  tasty-hunit.cabal
hunit/Test/Tasty/: HUnit.hs
hunit/Test/Tasty/HUnit/: Orig.hs  Steps.hs
quickcheck/: CHANGELOG.md  tasty-quickcheck.cabal
quickcheck/Test/Tasty/: QuickCheck.hs
quickcheck/tests/: options-example.hs  test.hs
smallcheck/: CHANGELOG.md  tasty-smallcheck.cabal
smallcheck/Test/Tasty/: SmallCheck.hs
