cabal-version:       2.2
name:                core-tests
version:             0.1
synopsis:            Tests for tasty
description:         Tests for tasty
license:             MIT
license-file:        LICENSE
author:              Roman Cheplyaka
maintainer:          roma@ro-che.info
-- copyright:
category:            Testing
build-type:          Simple
-- extra-source-files:

common commons
  default-language:    Haskell2010
  if !os(wasi)
    -- WASM backend does not yet support the threaded runtime
    ghc-options:       -threaded -with-rtsopts=-N

executable tasty-core-tests
  import:              commons
  main-is:             test.hs
  other-modules:       Resources, Timeouts, Utils, AWK, Dependencies
  -- other-extensions:
  build-depends:       base >= 4.9 && <= 5, tasty, tasty-hunit, tasty-golden, tasty-quickcheck, containers, stm, mtl,
                       filepath, bytestring, optparse-applicative
  -- hs-source-dirs:
  default-extensions:  CPP, NumDecimals
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -fno-warn-incomplete-uni-patterns

executable exit-status-test
  import:              commons
  main-is:             exit-status-test.hs
  build-depends:       base <= 5, tasty, tasty-hunit,
                       random, random-shuffle
  default-extensions:  CPP
  ghc-options:         -Wall -fno-warn-type-defaults

executable resource-release-test
  import:              commons
  main-is:             resource-release-test.hs
  build-depends:       base <= 5, tasty, tasty-hunit
  default-extensions:  CPP
  ghc-options:         -Wall -fno-warn-type-defaults

executable failing-pattern-test
  import:              commons
  main-is:             failing-pattern-test.hs
  build-depends:       base <= 5, tasty, tasty-hunit, random >= 1.2, mtl
  default-extensions:  ScopedTypeVariables
  ghc-options:         -Wall -fno-warn-type-defaults
