cabal-version:       >=1.10
name:                tasty
version:             1.4.2.3
synopsis:            Modern and extensible testing framework
description:         Tasty is a modern testing framework for Haskell.
                     It lets you combine your unit tests, golden
                     tests, QuickCheck/SmallCheck properties, and any
                     other types of tests into a single test suite.
license:             MIT
license-file:        LICENSE
author:              Roman Cheplyaka <roma@ro-che.info>
maintainer:          Roman Cheplyaka <roma@ro-che.info>
homepage:            https://github.com/UnkindPartition/tasty
bug-reports:         https://github.com/UnkindPartition/tasty/issues
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

Source-repository head
  type:     git
  location: git://github.com/UnkindPartition/tasty.git
  subdir:   core

flag clock
  description:
    Depend on the clock package for more accurate time measurement
  default: True

flag unix
  description:
    Depend on the unix package to install signal handlers
  default: True

library
  exposed-modules:
    Test.Tasty,
    Test.Tasty.Options,
    Test.Tasty.Providers,
    Test.Tasty.Providers.ConsoleFormat,
    Test.Tasty.Runners
    Test.Tasty.Ingredients,
    Test.Tasty.Ingredients.Basic
    Test.Tasty.Ingredients.ConsoleReporter

    -- for testing only
    Test.Tasty.Patterns.Types
    Test.Tasty.Patterns.Parser
    Test.Tasty.Patterns.Printer
    Test.Tasty.Patterns.Eval
  other-modules:
    Control.Concurrent.Async
    Test.Tasty.Parallel,
    Test.Tasty.Core,
    Test.Tasty.Options.Core,
    Test.Tasty.Options.Env,
    Test.Tasty.Patterns,
    Test.Tasty.Patterns.Expr,
    Test.Tasty.Run,
    Test.Tasty.Runners.Reducers,
    Test.Tasty.Runners.Utils,
    Test.Tasty.CmdLine,
    Test.Tasty.Ingredients.ListTests
    Test.Tasty.Ingredients.IncludingOptions

  build-depends:
    base                 >= 4.9 && < 5,
    stm                  >= 2.3,
    containers,
    transformers         >= 0.5,
    tagged               >= 0.5,
    optparse-applicative >= 0.14,
    unbounded-delays     >= 0.1,
    ansi-terminal        >= 0.9
  if(!impl(ghc >= 8.0))
    build-depends: semigroups

  if flag(clock) && !impl(ghcjs)
    build-depends: clock >= 0.4.4.0
  else
    build-depends: time  >= 1.4

  if !os(windows) && !impl(ghcjs)
    build-depends: wcwidth
    if flag(unix)
      build-depends: unix

  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions:  CPP, ScopedTypeVariables, DeriveDataTypeable
  ghc-options:
    -Wall
    -Wno-incomplete-uni-patterns
    -Wcompat
