name:                tasty-quickcheck
version:             0.11.1
synopsis:            QuickCheck support for the Tasty test framework.
description:         QuickCheck support for the Tasty test framework.
                     .
license:             MIT
license-file:        LICENSE
author:              Roman Cheplyaka <roma@ro-che.info>
maintainer:          Roman Cheplyaka <roma@ro-che.info>
homepage:            https://github.com/UnkindPartition/tasty
bug-reports:         https://github.com/UnkindPartition/tasty/issues
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

Source-repository head
  type:     git
  location: https://github.com/UnkindPartition/tasty.git
  subdir:   quickcheck

library
  exposed-modules:     Test.Tasty.QuickCheck
  other-extensions:    GeneralizedNewtypeDeriving, DeriveDataTypeable
  build-depends:       base >= 4.9 && < 5,
                       tagged < 0.9,
                       tasty >= 1.5.1 && < 1.6,
                       random < 1.3,
                       QuickCheck >= 2.10 && < 2.16,
                       optparse-applicative < 0.19

  default-language:    Haskell2010
  default-extensions: CPP
  ghc-options: -Wall

test-suite test
  default-language:
    Haskell2010
  default-extensions: CPP
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base
    , regex-tdfa >= 1.3 && < 1.4
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , QuickCheck
  ghc-options: -Wall
