Name:                tasty-smallcheck
Version:             0.8.1
Cabal-Version:       >= 1.6
Category:            Testing
Synopsis:            SmallCheck support for the Tasty test framework.
Description:         SmallCheck support for the Tasty test framework.
License:             MIT
License-File:        LICENSE
Author:              Roman Cheplyaka <roma@ro-che.info>
Maintainer:          Roman Cheplyaka <roma@ro-che.info>
Homepage:            http://documentup.com/feuerbach/tasty
Bug-reports:         https://github.com/feuerbach/tasty/issues
Build-Type:          Simple
extra-source-files:  CHANGELOG.md

Source-repository head
  type:     git
  location: git://github.com/feuerbach/tasty.git
  subdir:   smallcheck

Library
        Exposed-Modules:        Test.Tasty.SmallCheck

        Build-Depends:          tasty >= 0.8,
                                smallcheck >= 1.0,
                                base >= 4 && < 5,
                                async,
                                tagged
