Name:                tasty-smallcheck
Version:             0.8.2
Cabal-Version:       >= 1.10
Category:            Testing
Synopsis:            SmallCheck support for the Tasty test framework.
Description:         SmallCheck support for the Tasty test framework.
                     .
License:             MIT
License-File:        LICENSE
Author:              Roman Cheplyaka <roma@ro-che.info>
Maintainer:          Roman Cheplyaka <roma@ro-che.info>
Homepage:            https://github.com/UnkindPartition/tasty
Bug-reports:         https://github.com/UnkindPartition/tasty/issues
Build-Type:          Simple
extra-source-files:  CHANGELOG.md

Source-repository head
  type:     git
  location: https://github.com/UnkindPartition/tasty.git
  subdir:   smallcheck

Library
        Exposed-Modules:        Test.Tasty.SmallCheck

        Build-Depends:          tasty >= 0.8 && < 1.6,
                                smallcheck >= 1.0 && < 1.3,
                                base >= 4.9 && < 5,
                                tagged < 0.9,
                                optparse-applicative < 0.20
        ghc-options: -Wall -Wno-orphans
        default-language: Haskell2010
        default-extensions: CPP
